@@ -297,7 +297,7 @@ ovsdb_idl_create_unconnected(const struct ovsdb_idl_class *class,
             = table->change_seqno[OVSDB_IDL_CHANGE_DELETE] = 0;
         table->idl = idl;
         table->in_server_schema = false;
-        sset_init(&table->schema_columns);
+        shash_init(&table->schema_columns);
     }
 
     return idl;
@@ -340,6 +340,17 @@ ovsdb_idl_reset_min_index(struct ovsdb_idl *idl)
     ovsdb_cs_reset_min_index(idl->cs);
 }
 
+static void
+ovsdb_idl_schema_columns_clear(struct shash *schema_columns)
+{
+    struct shash_node *node;
+
+    SHASH_FOR_EACH (node, schema_columns) {
+        ovsdb_type_destroy(node->data);
+    }
+    shash_clear_free_data(schema_columns);
+}
+
 /* Destroys 'idl' and all of the data structures that it manages. */
 void
 ovsdb_idl_destroy(struct ovsdb_idl *idl)
@@ -354,9 +365,13 @@ ovsdb_idl_destroy(struct ovsdb_idl *idl)
         ovsdb_cs_destroy(idl->cs);
         for (size_t i = 0; i < idl->class_->n_tables; i++) {
             struct ovsdb_idl_table *table = &idl->tables[i];
+
             ovsdb_idl_destroy_indexes(table);
             shash_destroy(&table->columns);
-            sset_destroy(&table->schema_columns);
+
+            ovsdb_idl_schema_columns_clear(&table->schema_columns);
+            shash_destroy(&table->schema_columns);
+
             hmap_destroy(&table->rows);
             free(table->modes);
         }
@@ -776,19 +791,26 @@ ovsdb_idl_compose_monitor_request(const struct json *schema_json, void *idl_)
         struct ovsdb_idl_table *table = &idl->tables[i];
         const struct ovsdb_idl_table_class *tc = table->class_;
         struct json *monitor_request;
-        const struct sset *table_schema
+        struct shash *table_schema
             = schema ? shash_find_data(schema, table->class_->name) : NULL;
 
         struct json *columns
             = table->need_table ? json_array_create_empty() : NULL;
-        sset_clear(&table->schema_columns);
+
+        ovsdb_idl_schema_columns_clear(&table->schema_columns);
         for (size_t j = 0; j < tc->n_columns; j++) {
             const struct ovsdb_idl_column *column = &tc->columns[j];
-            bool idl_has_column = (table_schema &&
-                                  sset_contains(table_schema, column->name));
+            bool idl_has_column = false;
+            struct shash_node *node;
 
-            if (idl_has_column) {
-                sset_add(&table->schema_columns, column->name);
+            if (table_schema) {
+                node = shash_find(table_schema, column->name);
+                if (node) {
+                    idl_has_column = true;
+                    shash_add(&table->schema_columns,
+                              column->name, node->data);
+                    shash_delete(table_schema, node);
+                }
             }
 
             if (column->is_synthetic) {
@@ -995,8 +1017,38 @@ ovsdb_idl_server_has_column(const struct ovsdb_idl *idl,
     const struct ovsdb_idl_table *table =
         ovsdb_idl_table_from_column(idl, column);
 
-    return (table->in_server_schema && sset_find(&table->schema_columns,
-                                                 column->name));
+    return (table->in_server_schema && shash_find(&table->schema_columns,
+                                                  column->name));
+}
+
+/* Returns the type of a 'column' as defined in the schema reported
+ * by the server if the 'idl' has seen the 'column' in that schema.
+ * Returns NULL otherwise.
+ *
+ * Always returns NULL if idl has never been connected.
+ *
+ * Please see ovsdb_idl_compose_monitor_request() which sets
+ * 'struct ovsdb_idl_table *'->schema_columns accordingly.
+ *
+ * Usually this function is used indirectly through one of the
+ * "server_column_type" functions generated by ovsdb-idlc.
+ *
+ * Having different types between the server and the client in many
+ * cases will result in complete communication breakdown, so this
+ * function is mostly useful for checking for type constraints (enum,
+ * n_max) in case the server's schema is older or newer. */
+const struct ovsdb_type *
+ovsdb_idl_server_column_type(const struct ovsdb_idl *idl,
+                             const struct ovsdb_idl_column *column)
+{
+    const struct ovsdb_idl_table *table =
+        ovsdb_idl_table_from_column(idl, column);
+
+    if (!table->in_server_schema) {
+        return NULL;
+    }
+
+    return shash_find_data(&table->schema_columns, column->name);
 }
 
 /* A single clause within an ovsdb_idl_condition. */
